--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 	Radius by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Radius by TEMPLATED</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html><head><title>Boodie's Bistro & Catering Services</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+	<meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 		<!-- Header -->
 			<header id="header"><div class="inner">
 					<div class="content">
-						<h1>Radius</h1>
-						<h2>A fully responsive masonry-style<br>
-						portfolio template.</h2>
+						<h1>Boodie's Bistro</h1>
+						<h2>Take a quick tour of our products and services<br>
+						</h2>
 						<a href="#" class="button big alt"><span>Let's Go</span></a>
 					</div>
 					<a href="#" class="button hidden"><span>Let's Go</span></a>
@@ -21,27 +25,27 @@
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic01.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/4.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic02.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/2.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic03.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/seafood2.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic04.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/8.jpg" alt="" width="533" height="800"></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic06.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/steak.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic05.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/resto1.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic08.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/5.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
 								<a href="detail1.html"><img src="images/pic07.jpg" alt="" width="800" height="533"></a>
@@ -49,30 +53,30 @@
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic09.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/7.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic12.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/halaya.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic11.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/seafood1.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic10.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/1.jpg" alt="" width="533" height="800"></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic13.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/6.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
 								<a href="detail1.html"><img src="images/pic14.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic15.jpg" alt="" width="533" height="800"></a>
+								<a href="detail1.html"><img src="pics/3.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/pic16.jpg" alt="" width="800" height="533"></a>
+								<a href="detail1.html"><img src="pics/resto2.jpg" alt="" width="800" height="533"></a>
 							</div>
 
 					</div>
@@ -80,22 +84,23 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer"><a href="#" class="info fa fa-info-circle"><span>About</span></a>
-				<div class="inner">
-					<div class="content">
-						<h3>Vestibulum hendrerit tortor id gravida</h3>
-						<p>In tempor porttitor nisl non elementum. Nulla ipsum ipsum, feugiat vitae vehicula vitae, imperdiet sed risus. Fusce sed dictum neque, id auctor felis. Praesent luctus sagittis viverra. Nulla erat nibh, fermentum quis enim ac, ultrices euismod augue. Proin ligula nibh, pretium at enim eget, tempor feugiat nulla.</p>
+				<div class="copyright">
+					<div class="div1">
+						<div class="loc">
+							<p style="margin: 0;">Location: Inside Food Central Compound, Lacson Street, Mandalagan</p>
+						</div>
+						<div class="maps">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3920.583966265082!2d122.95534271113279!3d10.689365260748595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aed1727aa5cff1%3A0x7fdd517e062387fe!2sBoodie%E2%80%99s%20Bistro!5e0!3m2!1sen!2sph!4v1701181746415!5m2!1sen!2sph" width="560" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div>
 					</div>
-					<div class="copyright">
-						<h3>Follow me</h3>
-						<ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						</ul></div>
-				</div>
-			</footer><div class="copyright">
-			Design by: <a href="https://templated.co/">TEMPLATED.CO</a>
+					<div class="div2">
+						<a href="https://facebook.com/boodiesbatchoy/"><img style="border-radius: 5px;" src="images/fb2.png" alt="facebook page">
+						<a href="https://instagram.com/boodiesbistro/"><img style="margin-left: 5px;border-radius: 5px;" src="images/ig.png" alt="instagram page">
+					</div>
+					<div class="div3">
+						<p>DIV 3</p>
+					</div>
+			
 		</div>
 
 		<!-- Scripts -->
