--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Radius by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Boodie's Bistro & Catering Services</title>
+<html><head><title>Boodie's Bistro & Catering Services</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -108,7 +104,7 @@
 						</div>
 					</div>
 					<div class="div3">
-						<p>Menu</p>
+						<a style="font-size: 20px;" href="menu.html">Menu</a>
 					</div>
 					
 			
