--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						</div>
 					</div>
 					<div class="div3">
-						<a style="font-size: 20px;" href="menu.html">Menu</a>
+						<a style="font-size: 20px;color: white;" href="menu.html">Menu</a>
 					</div>
 					
 			
