--- a/menu.html
+++ b/menu.html
@@ -10,8 +10,8 @@
 </head>
 
 <body style="margin-bottom: 30px; background-color: black;">
-  <img style="padding: 40px;" src="pics/menu1.jpg" alt="Menu">
-  <img style="padding: 20px;"src="pics/menu2.jpg" alt="Menu">
-  <img style="padding: 40px;"src="pics/menu3.jpg" alt="Menu">
+  <img style="padding: 40px;width:100%;" src="pics/menu1.jpg" alt="Menu">
+  <img style="padding: 20px;width:100%;"src="pics/menu2.jpg" alt="Menu">
+  <img style="padding: 40px;width:100%;"src="pics/menu3.jpg" alt="Menu">
 </body>
 	
