--- a/menu.html
+++ b/menu.html
@@ -1,17 +1,54 @@
 <!DOCTYPE HTML>
+<html lang="en">
 
-<html>
-  <head>
+<head>
     <title>Boodie's Bistro Menu</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-	<meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body style="margin-bottom: 30px; background-color: black;">
-  <img style="padding: 40px;width:100%;" src="pics/menu1.jpg" alt="Menu">
-  <img style="padding: 20px;width:100%;"src="pics/menu2.jpg" alt="Menu">
-  <img style="padding: 40px;width:100%;"src="pics/menu3.jpg" alt="Menu">
+    <div class="image-container">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu1.jpg" alt="Menu">
+        <img style="padding: 20px; max-width: 100%;" src="pics/menu2.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu3.jpg" alt="Menu">
+        <img style="padding: 20px; max-width: 100%;" src="pics/menu4.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu5.jpg" alt="Menu">
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer"><a href="#" class="info fa fa-info-circle"><span>About</span></a>
+        <div class="inner">
+            <div class="content">
+                <h1><button onclick="window.location.href='index.html'">Home</button></h1>
+                <h1><button onclick="window.location.href='menu.html'">Menu</button></h1>
+                <h1><button onclick="window.location.href='portfolio.html'">Catering Portfolio</button></h1>
+                <h1><button onclick="window.location.href='contact.html'">Contact Us</button></h1>
+            </div>
+            <div class="copyright">
+                <h3>Our Socials</h3>
+                <ul class="icons">
+                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://facebook.com/boodiesbatchoy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://instagram.com/boodiesbistro" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <div class="copyright">
+        To avail our free hotspot, please fill out this <a href="https://forms.gle/iiew9PtfGzCrmtrX8">form.</a>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
-	
+
+</html>
