--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
       Facebook Page</a></h1>
    
     <h1>Landline: 034-4458462</h1>
+    <h1>Mobile Number: 09093622192</h1>
     <h1>Email Address: info@boodies.net</h1>
   </div>
 
