--- a/tnc.html
+++ b/tnc.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Add your meta tags and title here -->
     <link rel="stylesheet" href="css/style.css">
+    <title>Terms and Conditions</title>
 </head>
 
 <body>
