--- a/ppc.html
+++ b/ppc.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Add your meta tags and title here -->
     <link rel="stylesheet" href="css/style.css">
+    <title>Privacy Policy</title>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <h1>Privacy Policy for Boodie's Free WiFi Service</h1>
 
         <p>Your privacy is important to us. It is Boodie's Bistro's policy to respect your privacy regarding any
-            information we may collect from you through our free WiFi service with a captive portal.</p>
+            information we may collect from you through our free WiFi service.</p>
 
         <p>We may collect and process the following data:</p>
 
@@ -38,7 +39,7 @@
 
         <!-- Data Handling Principles -->
         <ul>
-            <li>We will only collect and process data with your consent through the captive portal.</li>
+            <li>We will only collect and process data with your consent through the form.</li>
             <li>We will only use the collected data for providing WiFi access and marketing purposes.</li>
             <li>We will take reasonable measures to secure the collected data.</li>
             <li>We will not sell or share your data with third parties for purposes other than marketing without
