--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         .body1 {
             background-color: white;
             padding-top: -10vh;
-            margin-bottom: 10vh;
+            margin-bottom: 5vh;
         }
 
         .swiper-container {
@@ -95,7 +95,7 @@
       Boodie's Catering Portfolio
     </div>
     <div class="title">
-      House Blessing at Fountain Grove
+      House Blessing/Christening at Fountain Grove
     </div>
     <div class="body1">
        <!-- Slider main container -->
@@ -117,6 +117,97 @@
       <div class="swiper-button-next"></div>
   </div>
     </div>
+
+    <div class="title">
+        Birthday Celebration at Villa Angela
+      </div>
+      <div class="body1">
+         <!-- Slider main container -->
+      <div class="swiper-container">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="villangela/1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/2.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/3.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/4.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/5.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/6.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="villangela/7.jpg" alt=""></div>
+
+            <!-- Add more slides as needed -->
+        </div>
+  
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+      </div>
+
+
+      <div class="title">
+        House Blessing at Alijis
+      </div>
+      <div class="body1">
+         <!-- Slider main container -->
+      <div class="swiper-container">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="alijis/1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/2.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/3.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/4.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/5.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/6.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/7.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/8.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="alijis/9.jpg" alt=""></div>
+
+            <!-- Add more slides as needed -->
+        </div>
+  
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+      </div>
+
+
+
+      <div class="title">
+        Birthday Celebration at Asyana
+      </div>
+      <div class="body1">
+         <!-- Slider main container -->
+      <div class="swiper-container">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="asyana/10.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/2.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/3.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/4.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/5.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/6.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/7.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/8.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/9.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="asyana/11.jpg" alt=""></div>
+
+            <!-- Add more slides as needed -->
+        </div>
+  
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+      </div>
+
+
+
+
     <!-- Footer -->
 			<footer id="footer"><a href="#" class="info fa fa-info-circle"><span>About</span></a>
 				<div class="inner">
