--- a/index.html
+++ b/index.html
@@ -21,58 +21,58 @@
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/4.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/4.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/2.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/2.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/seafood2.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/seafood2.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/8.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/8.jpg" alt="" width="533" height="800"></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/steak.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/steak.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/10.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/10.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/5.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/5.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/resto1.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/resto1.jpg" alt="" width="800" height="533"></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/7.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/7.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/halaya.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/halaya.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/seafood1.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/seafood1.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/1.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/1.jpg" alt="" width="533" height="800"></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/6.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/6.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/11.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/11.jpg" alt="" width="800" height="533"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/3.jpg" alt="" width="533" height="800"></a>
+								<a><img src="pics/3.jpg" alt="" width="533" height="800"></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="pics/cater.jpg" alt="" width="800" height="533"></a>
+								<a><img src="pics/cater.jpg" alt="" width="800" height="533"></a>
 							</div>
 
 					</div>
@@ -83,7 +83,7 @@
 			<footer id="footer"><a href="#" class="info fa fa-info-circle"><span>About</span></a>
 				<div class="inner">
 					<div class="content">
-						<h1><button onclick="window.location.href='index.html'">Home</button></h1>
+						<h1><button onclick="window.location.href='/'">Home</button></h1>
 						<h1><button onclick="window.location.href='menu.html'">Menu</button></h1>
         		<h1><button onclick="window.location.href='portfolio.html'">Catering Portfolio</button></h1>
         		<h1><button onclick="window.location.href='contact.html'">Contact Us</button></h1>
