--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
         font-family: Montserrat;
         font-weight: bold;
         margin: 50px;
+      
       }
       .maindiv h1{
         margin-top: 60px;
@@ -46,7 +47,7 @@
 <body>
   <div class="maindiv" style="width: 50%;margin: auto;margin-bottom: 400px;">
     <h2>You may contact us through the following:</h2>
-    <h1><a href="https://facebook.com/boodiesbatchoy" class="facebook-button" target="_blank">
+    <h1><a href="https://facebook.com/boodiesbistro" class="facebook-button" target="_blank">
       Facebook Page</a></h1>
    
     <h1>Landline: 034-4458462</h1>
@@ -68,7 +69,7 @@
     <div class="copyright">
       <h3>Our Socials</h3>
       <ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="https://facebook.com/boodiesbatchoy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="https://facebook.com/boodiesbistro" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="https://instagram.com/boodiesbistro" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
       
       </ul></div>
@@ -82,3 +83,7 @@ To avail our free hotspot, please fill out this <a href="https://forms.gle/iiew9
 
 
 </body>
+
+
+
+	
