--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
                 <h3>Our Socials</h3>
                 <ul class="icons">
                     <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="https://facebook.com/boodiesbatchoy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://facebook.com/boodiesbistro" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                     <li><a href="https://instagram.com/boodiesbistro" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
                 </ul>
             </div>
