--- a/menu.html
+++ b/menu.html
@@ -14,11 +14,12 @@
 
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu1.jpg" alt="Menu">
-        <img style="padding: 20px; max-width: 100%;" src="pics/menu2.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu3.jpg" alt="Menu">
-        <img style="padding: 20px; max-width: 100%;" src="pics/menu4.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu5.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/pampagana.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/pasabaw.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/pamahaw.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/drinks.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/tray1.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/tray2.jpeg" alt="Menu">
     </div>
 
     <!-- Footer -->
