--- a/catering.html
+++ b/catering.html
@@ -22,13 +22,13 @@
 
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/1.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/2.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/3.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/4.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/5.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/6.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/7.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c1.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c2.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c3.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c4.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c5.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c6.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c7.jpeg" alt="Menu">
     </div>
 
     <!-- Footer -->
