add wedding package tab

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 					<div class="content">
 						<h1><button onclick="window.location.href='/'">Home</button></h1>
 						<h1><button onclick="window.location.href='menu.html'">Menu</button></h1>
+						<h1><button onclick="window.location.href='catering.html'">Catering Menu</button></h1>
+						<h1><button onclick="window.location.href='wedding.html'">Wedding Package</button></h1>
         		<h1><button onclick="window.location.href='portfolio.html'">Catering Portfolio</button></h1>
         		<h1><button onclick="window.location.href='contact.html'">Contact Us</button></h1>
         
