--- a/catering.html
+++ b/catering.html
@@ -35,10 +35,12 @@
     <footer id="footer"><a href="#" class="info fa fa-info-circle"><span>About</span></a>
         <div class="inner">
             <div class="content">
-                <h1><button onclick="window.location.href='index.html'">Home</button></h1>
-                <h1><button onclick="window.location.href='menu.html'">Menu</button></h1>
-                <h1><button onclick="window.location.href='portfolio.html'">Catering Portfolio</button></h1>
-                <h1><button onclick="window.location.href='contact.html'">Contact Us</button></h1>
+						<h1><button onclick="window.location.href='/'">Home</button></h1>
+						<h1><button onclick="window.location.href='menu.html'">Menu</button></h1>
+						<h1><button onclick="window.location.href='catering.html'">Catering Menu</button></h1>
+						<h1><button onclick="window.location.href='wedding.html'">Wedding Package</button></h1>
+        		<h1><button onclick="window.location.href='portfolio.html'">Catering Portfolio</button></h1>
+        		<h1><button onclick="window.location.href='contact.html'">Contact Us</button></h1>
             </div>
             <div class="copyright">
                 <h3>Our Socials</h3>
