--- a/menu.html
+++ b/menu.html
@@ -14,12 +14,11 @@
 
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
-        <img style="padding: 40px; max-width: 100%;" src="pics/pampagana.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/pasabaw.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/pamahaw.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/drinks.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/tray1.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/tray2.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu 11.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu 12.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu 13.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu 14.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/menu 15.jpg" alt="Menu">
     </div>
 
     <!-- Footer -->
