--- a/menu.html
+++ b/menu.html
@@ -33,11 +33,11 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
 
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu 11.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu 12.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu 13.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu 14.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="pics/menu 15.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/newm1.jfif" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/newm2.jfif" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/newm3.jfif" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/newm4.jfif" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="pics/newm5.jfif" alt="Menu">
     </div>
 
     <!-- Footer -->
