--- a/catering.html
+++ b/catering.html
@@ -39,7 +39,7 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/bnew.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c2.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/cb.jpg" alt="Menu">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c3.jpeg" alt="Menu">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c4.jpeg" alt="Menu">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/c5.jpeg" alt="Menu">
