--- a/catering.html
+++ b/catering.html
@@ -40,11 +40,11 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
     <div class="image-container">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/dnew.jpg" alt="Menu">
         <img style="padding: 40px; max-width: 100%;" src="cateringmenu/cb.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d3.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d4.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d5.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d6.jpeg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d7.jpeg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d3.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d4.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d5.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d6.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d7.jpg" alt="Menu">
     </div>
 
     <!-- Footer -->
@@ -80,4 +80,5 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
