--- a/catering.html
+++ b/catering.html
@@ -38,14 +38,15 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
 
 <body style="margin-bottom: 30px; background-color: black;">
     <div class="image-container">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/dnew.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/cb.jpg" alt="Menu">
-		<img style="padding: 40px; max-width: 100%;" src="cateringmenu/ps.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d3.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d4.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d5.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d6.jpg" alt="Menu">
-        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/d7.jpg" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e1.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e2.png" alt="Menu">
+		<img style="padding: 40px; max-width: 100%;" src="cateringmenu/e3.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e4.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e5.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e6.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e7.png" alt="Menu">
+        <img style="padding: 40px; max-width: 100%;" src="cateringmenu/e8.png" alt="Menu">
+		<img style="padding: 40px; max-width: 100%;" src="cateringmenu/e9.png" alt="Menu">
     </div>
 
     <!-- Footer -->
@@ -81,6 +82,7 @@ src="https://www.facebook.com/tr?id=8562493860536939&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
 
 
